added the Sponsors Partners Friends

--- a/web/src/components/UI/BrandButton/BrandButton.scss
+++ b/web/src/components/UI/BrandButton/BrandButton.scss
@@ -56,4 +56,12 @@
     $hover-bg: #bf2329,
     $hover-text: $white-color
   );
+  .partnership {
+    @include button-style(
+      $bg-color: $brand-color,
+      $text-color: $white-color,
+      $hover-bg: #5c5d5f,
+      $hover-text: $white-color
+    );
+  }
 }
