--- a/web/src/pages/partnerships/partnership.module.scss
+++ b/web/src/pages/partnerships/partnership.module.scss
@@ -10,3 +10,15 @@
     }
   }
   
+  .values {
+    margin-bottom: 1rem;
+    margin-top: 0;
+    font-weight: 1000;
+    color: $brand-color;
+  }
+  
+  .subHeading {
+    align-self: start;
+    width: 50vh;
+    color: $brand-grey-dark;
+  }
