added the form and backround img.

--- a/web/src/components/Forms/YouthProgramGuide.js/form.module.scss
+++ b/web/src/components/Forms/YouthProgramGuide.js/form.module.scss
@@ -35,3 +35,15 @@
     font-size: 0.6rem;
   }
 }
+
+.partnership-form-card {
+  margin-top: 20px;
+  background-size: cover;
+  font-size: 1rem;
+  width: fit-content;
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+.partnership-form-container {
+  background-color: transparent;
+}
