switched the h from vh to px to stop text overlap

--- a/web/src/templates/blog/BlogPreview.scss
+++ b/web/src/templates/blog/BlogPreview.scss
@@ -5,7 +5,9 @@
   letter-spacing: 0 !important;
 }
 .blog-card {
-  height: 60vh;
+
+  height: 500px;
+  
 
   @include screen-xs {
     height: 85vh;
