fix button size for program guide

--- a/web/src/pages/program/program.module.scss
+++ b/web/src/pages/program/program.module.scss
@@ -79,8 +79,8 @@ hr {
 }
 
 .buttons {
-  line-height: 0.6rem;
+  line-height: 0.8rem;
   min-height: 50px;
-  font-size: 11px;
+  font-size: 0.6rem !important;
   letter-spacing: 0.1rem;
 }
