Events moved and buttons working

--- a/web/src/pages/events/5across/fiveAcross.module.scss
+++ b/web/src/pages/events/5across/fiveAcross.module.scss
@@ -126,3 +126,48 @@
     display: "inline-block";
   }
 }
+
+@media (max-width: 992px) {
+  .noHorizontalSpacing {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .noHorizontalSpacing {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+    margin-left: 3rem !important;
+    margin-right: 3rem !important;
+  }
+}
+
+.custom-container {
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+.flex-item {
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  padding: 15px;
+
+  @media (min-width: 768px) {
+    flex: 1 1 50%;
+  }
+
+  @media (min-width: 992px) {
+    flex: 1 1 33.333%;
+  }
+}
