Updated X icon that design team supplied 06-18-2025

--- a/web/src/pages/parking/parking.module.css
+++ b/web/src/pages/parking/parking.module.css
@@ -74,7 +74,7 @@
   top: 3px;
   width: 18px;
   height: 18px;
-  background-image: url(/images/updatedX.png);
+  background-image: url(/images/Xicon.png);
   background-size: contain;
   background-repeat: no-repeat;
   flex-shrink: 0;
