--- a/web/src/pages/parking/parking.module.css
+++ b/web/src/pages/parking/parking.module.css
@@ -3,12 +3,12 @@
   color: white;
 }
 .parking{
-  background-image: url(/images/headerwithicon.png);
+  background-image: url(/images/parkingpageheader.png);
   background-size: cover;
   background-position-y: 0%;
   background-position-x: center;
   margin: auto;
-  height: 70vh;
+  height: 80vh;
   width: auto;
   background-repeat: no-repeat;
 }
@@ -29,9 +29,8 @@
   border-color: #ed3243;
   border-style: solid;
   border-width: 1px;
-  height: 50vh;
+  height: auto;
   width: 100%;
-  text-align: center;
   max-width: 500px;
   min-height: auto;
   box-sizing: border-box;
@@ -75,7 +74,7 @@
   top: 3px;
   width: 18px;
   height: 18px;
-  background-image: url(/images/Xmark.png);
+  background-image: url(/images/Xicon.png);
   background-size: contain;
   background-repeat: no-repeat;
   flex-shrink: 0;
