--- a/web/src/templates/blog/BlogPreview.scss
+++ b/web/src/templates/blog/BlogPreview.scss
@@ -4,18 +4,17 @@
 * {
   letter-spacing: 0 !important;
 }
-
 .blog-card {
+
   height: 500px;
+  
 
   @include screen-xs {
     height: 85vh;
   }
-
   .bg {
     position: absolute;
   }
-
   .book {
     translate: 0 -10%;
     position: absolute;
@@ -28,14 +27,10 @@
   }
 
   .blog-details {
-    opacity: 1;
-    translate: 0;
-    transition: opacity 0.5s ease, translate 0.5s ease-in-out;
-
     .author {
+      // color: $brand-color !important;
       color: white;
       font-size: 0.9rem !important;
-
       @include screen-tablet-max {
         font-size: 0.7rem !important;
       }
@@ -44,7 +39,6 @@
     .date {
       font-size: 0.9rem;
       margin-top: -7px;
-
       @include screen-tablet-max {
         font-size: 0.7rem !important;
       }
@@ -53,7 +47,6 @@
 
   .title {
     font-size: 1.3rem !important;
-
     @include screen-tablet-max {
       font-size: 1rem !important;
     }
@@ -61,9 +54,35 @@
 
   .description {
     line-height: normal;
-
     @include screen-tablet-max {
       font-size: 0.7rem;
+    }
+  }
+
+  &:hover {
+    .blog-image {
+      transform: scale(1.02);
+
+      > .blog-details {
+        opacity: 0;
+        translate: 0 10%;
+        transition:
+          opacity 0.5s,
+          translate 0.5s ease-in-out;
+      }
+
+      .bg {
+        background-color: rgba(193, 32, 41, 0.65);
+      }
+
+      .book {
+        translate: 0;
+        display: flex !important;
+        opacity: 1;
+        transition:
+          opacity 0.5s,
+          translate 0.5s ease-in-out;
+      }
     }
   }
 }
@@ -79,38 +98,5 @@
     transparent 0%,
     rgba(0, 0, 0, 0.8) 100%
   );
-  z-index: -1;
-}
-
-.blog-image-link {
-  text-decoration: none;
-  display: block;
-  width: 100%;
-
-  .blog-image {
-    position: relative;
-    transition: all 0.2s ease-in-out;
-  }
-
-  &:hover {
-    .blog-image {
-      transform: scale(1.02);
-
-      > .blog-details {
-        opacity: 0;
-        translate: 0;
-      }
-
-      .bg {
-        background-color: rgba(193, 32, 41, 0.65);
-      }
-
-      .book {
-        translate: 0;
-        display: flex !important;
-        opacity: 1;
-        transition: opacity 0.5s, translate 0.5s ease-in-out;
-      }
-    }
-  }
+  z-index: 1;
 }
